--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_zapisymiejscakosztow_wmcu.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_zapisymiejscakosztow_wmcu.xhtml
@@ -71,7 +71,7 @@
                     <p:column selectionMode="multiple" styleClass="checkwiersza" width="20" style="text-align: center;"></p:column>
                     <p:column>
                         <p:dataTable lazy="false"  id="tabelazapisymiejscakosztowwmcu#{numer}" value="#{item.miejsceKosztowZest}" var="loop"  
-                                     emptyMessage="Nie ma zapisów na koncie"
+                                     emptyMessage="Nie ma zapisów na koncie" rowKey="#{loop.kontonumer}"
                                      rowIndexVar="rowindex" styleClass="tabelazapisymiejscakosztowwmcu"  style="width: 1000px; margin-top: 10px; margin-bottom: 10px;" 
                                      skipChildren="true"
                                      >
