--- a/npkpir_23/web/wspolny/sub/zestawienia/miejscaprzychodow.xhtml
+++ b/npkpir_23/web/wspolny/sub/zestawienia/miejscaprzychodow.xhtml
@@ -40,7 +40,7 @@
                     <p:column selectionMode="multiple" width="20" style="text-align: center;"></p:column>
                     <p:column>
                         <p:dataTable lazy="false"  id="tabelazapisymiejscakosztowwmcu#{numer}" value="#{item.miejscePrzychodowZest}" var="loop"  
-                                     emptyMessage="Nie ma zapisów na koncie"
+                                     emptyMessage="Nie ma zapisów na koncie" rowKey="#{loop.kontonumer}"
                                      rowIndexVar="rowindex" styleClass="tabelazapisymiejscakosztowwmcu"  style="width: 900px; margin-top: 10px; margin-bottom: 10px;" 
                                      skipChildren="true"  expandedRow="#{miejscePrzychodowView.rozwinwszystkie}"
                                      >
@@ -67,7 +67,7 @@
                                 <bcf:outputpl value="#{loop.sumanarastajaco}"/>
                             </p:column>
                             <p:rowExpansion>
-                                <p:dataTable lazy="false"  value="#{loop.stronywiersza}" var="loopik" emptyMessage="nie ma rachunków na tym koncie">
+                                <p:dataTable lazy="false"  value="#{loop.stronywiersza}" var="loopik" emptyMessage="nie ma rachunków na tym koncie"  rowKey="#{loopik.id}">
                                     <p:column headerText="#{mgs.dokument}" width="90">
                                         <h:outputText value="#{loopik.dokfkS}"/>
                                     </p:column>
