--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_przeglad.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_przeglad.xhtml
@@ -84,6 +84,7 @@
                         <p:selectOneMenu onchange="PF('fakturarozliczenia_tablica').filter()" styleClass="dokfaktrozliczenia">
                             <f:selectItem itemLabel="all" itemValue="" noSelectionOption="true"/>
                              <f:selectItem itemLabel="rk" itemValue="rk"/>
+                             <f:selectItem itemLabel="rke" itemValue="rke"/>
                             <f:selectItem itemLabel="wb" itemValue="wb"/>
                             <f:selectItem itemLabel="wbe" itemValue="wbe"/>
                             <f:selectItem itemLabel="wbm" itemValue="wbm"/>
