naprawa grodze wydruk faktury

--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrachunki.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrachunki.xhtml
@@ -81,6 +81,7 @@
                             <f:selectItem itemLabel="wbe" itemValue="wbe"/>
                             <f:selectItem itemLabel="wbm" itemValue="wbm"/>
                             <f:selectItem itemLabel="wbme" itemValue="wbme"/>
+                            <f:selectItem itemLabel="rev" itemValue="rev"/>
                             <f:selectItem itemLabel="fa" itemValue="fa"/>
                             <f:selectItem itemLabel="bo" itemValue="bo"/>
                         </h:selectOneListbox>
@@ -194,6 +195,7 @@
                             <f:selectItem itemLabel="wbe" itemValue="wbe"/>
                             <f:selectItem itemLabel="wbm" itemValue="wbm"/>
                             <f:selectItem itemLabel="wbme" itemValue="wbme"/>
+                            <f:selectItem itemLabel="rev" itemValue="rev"/>
                             <f:selectItem itemLabel="fa" itemValue="fa"/>
                             <f:selectItem itemLabel="bo" itemValue="bo"/>
                             </p:selectOneMenu>
