--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_przeglad.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_przeglad.xhtml
@@ -89,6 +89,7 @@
                             <f:selectItem itemLabel="wbe" itemValue="wbe"/>
                             <f:selectItem itemLabel="wbm" itemValue="wbm"/>
                             <f:selectItem itemLabel="wbme" itemValue="wbme"/>
+                            <f:selectItem itemLabel="rev" itemValue="rev"/>
                             <f:selectItem itemLabel="fa" itemValue="fa"/>
                             <f:selectItem itemLabel="bo" itemValue="bo"/>
                         </p:selectOneMenu>
