--- a/npkpir_23/web/wspolny/sub/zestawienia/miejscakosztow.xhtml
+++ b/npkpir_23/web/wspolny/sub/zestawienia/miejscakosztow.xhtml
@@ -17,10 +17,24 @@
         </style>
         <h:form id="formzapisymiejscakosztowwmcu">
             <p:panelGrid columns="10" style="margin-left: 2%;" >
-                <h:outputText value="mc: "/>
+<!--                <h:outputText value="mc: "/>
                 <p:column>
                     <p:selectOneMenu value="#{WpisView.miesiacWpisu}">
                         <p:ajax event="change" listener="#{miejsceKosztowView.zapisykontmiesiace}" update="akordeon:formzapisymiejscakosztowwmcu"/>
+                        <f:selectItems value="#{mce.mceList}"/>
+                    </p:selectOneMenu>
+                </p:column>-->
+                <h:outputText value="mc od"/>
+                <p:column>
+                    <p:selectOneMenu id="miesiacWpisuOd" value="#{WpisView.miesiacOd}">
+                        <p:ajax event="change" listener="#{miejsceKosztowView.zapisykontmiesiace}"  partialSubmit="true" update="akordeon:formzapisymiejscakosztowwmcu"/>
+                        <f:selectItems value="#{mce.mceList}"/>
+                    </p:selectOneMenu>
+                </p:column>
+                <h:outputText value="mc do"/>
+                <p:column>
+                    <p:selectOneMenu id="miesiacWpisuDo" value="#{WpisView.miesiacDo}">
+                        <p:ajax event="change" listener="#{miejsceKosztowView.zapisykontmiesiace}" partialSubmit="true" update="akordeon:formzapisymiejscakosztowwmcu"/>
                         <f:selectItems value="#{mce.mceList}"/>
                     </p:selectOneMenu>
                 </p:column>
@@ -34,13 +48,13 @@
             </p:panelGrid>
             <p:panel >
                 <p:dataTable lazy="false"  value="#{miejsceKosztowView.listasummiejsckosztow}" var="item" rowIndexVar="numer" id="tabelazbiorczakoszty" 
-                             emptyMessage="#{mgs.niemamiejsckosztow}" rowKey="#{item.id}" style="width: 970px;"
+                             emptyMessage="#{mgs.niemamiejsckosztow}" rowKey="#{item.id}" style="width: 980px;"
                              selection="#{miejsceKosztowView.listawybranychmiejsckosztow}">
                     <p:column selectionMode="multiple" width="20" style="text-align: center;"></p:column>
                     <p:column>
                         <p:dataTable lazy="false"  id="tabelazapisymiejscakosztowwmcu#{numer}" value="#{item.miejsceKosztowZest}" var="loop"  
                                      emptyMessage="Nie ma zapisów na koncie" rowKey="#{loop.kontonumer}"
-                                     rowIndexVar="rowindex" styleClass="tabelazapisymiejscakosztowwmcu"  style="width: 900px; margin-top: 10px; margin-bottom: 10px;" 
+                                     rowIndexVar="rowindex" styleClass="tabelazapisymiejscakosztowwmcu"  style="width: 950px; margin-top: 10px; margin-bottom: 10px;" 
                                      >
                             <f:facet name="header">
                                 <h:outputText value="#{item.miejsceKosztow.opismiejsca}"/>
@@ -69,7 +83,7 @@
                                     <p:column headerText="#{mgs.dokument}" width="90">
                                         <h:outputText value="#{loopik.dokfkS}"/>
                                     </p:column>
-                                    <p:column headerText="#{mgs.data}" width="80">
+                                    <p:column headerText="#{mgs.data}" width="90">
                                         <h:outputText value="#{loopik.dokfk.datadokumentu}"/>
                                     </p:column>
                                     <p:column headerText="#{mgs.nr}" width="100">
