--- a/npkpir_23/web/templateFK.xhtml
+++ b/npkpir_23/web/templateFK.xhtml
@@ -43,6 +43,7 @@
             <h:outputScript library="js_fk" name="menu.js"/>
             <h:outputScript library="js_fk" name="wydruki_fk.js"/>
             <h:outputScript library="js_fk" name="dialog_bilanse.js"/>
+            <h:outputScript library="js_fk" name="vatoznacz_1.js"/>
             <h:outputScript library="js_fk" name="dialog_wpis_srodkitrwale.js"/>
             <h:outputScript library="js_pkpir" name="fakturapkpir.js"/>
             <h:outputScript library="js_fk" name="dialog_ewidencjavatRK.js"/>
